--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechPath</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css"> <!-- Assuming you still want to use your custom styles -->
 </head>
-<body>
-    <header>
-        <div class="container">
-            <h1 class="logo">TechPath</h1>
-        </div>
-    </header>
 
-    <section class="hero">
-        <div class="content">
-            <h2>Dunia<span>Teknologi</span></h2>
-            <p>Masih bingung mau masuk Jurusan kuliah apa?
-                Masuk Teknik Informatika Solusinyaa
-            </p>
-            <p> Disini bisa mempelajari tentang Web Development. 
-                Web development adalah proses pembuatan dan pemeliharaan situs web atau aplikasi web yang dapat diakses melalui internet.</p>
-            <p>dan kursus ini membantu kamu untuk tes kemampuan diri yang sudah kamu pelajari
-                kami juga menyediakan rekomendasi karir atau perusahaan IT yang cocok dengan skill kamu</p>
-            <P>Ayo Tunggu Apalagi! Masa depan cerah menanti Anda dalam dunia teknologi. Mari mulai perjalanan Anda menuju sukses bersama kami!</P>
-            <a href="login.html" class="join-button">Join Us</a>
-        </div>
-        <div class="illustration">
-            <img src="img/elemen.PNG" alt="Person using a computer" />
+<body>
+
+    <!-- Hero Section -->
+    <section class="hero d-flex align-items-center py-5">
+        <div class="container d-flex flex-column flex-md-row align-items-center">
+            <!-- Left Content -->
+            <div class="content text-center text-md-start mb-4 mb-md-0">
+                <h2>Dunia <span style="color: #696fec;">Teknologi</span></h2>
+                <p>Masih bingung mau masuk Jurusan kuliah apa? Masuk Teknik Informatika Solusinyaa</p>
+                <p>Disini bisa mempelajari tentang Web Development. Web development adalah proses pembuatan dan pemeliharaan situs web atau aplikasi web yang dapat diakses melalui internet.</p>
+                <p>Dan kursus ini membantu kamu untuk tes kemampuan diri yang sudah kamu pelajari kami juga menyediakan rekomendasi karir atau perusahaan IT yang cocok dengan skill kamu.</p>
+                <p>Ayo Tunggu Apalagi! Masa depan cerah menanti Anda dalam dunia teknologi. Mari mulai perjalanan Anda menuju sukses bersama kami!</p>
+                <a href="login.html" class="btn" style="background-color: #696fec; color: white;">Join Us</a>
+            </div>
+
+            <!-- Right Illustration -->
+            <div class="illustration ms-md-5">
+                <img src="img/elemen.PNG" alt="Person using a computer" class="img-fluid" />
+            </div>
         </div>
     </section>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
