--- a/Beranda.html
+++ b/Beranda.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,585 +7,248 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
       background-color: #f0f2f5;
-      display: flex;
-      min-height: 100vh;
     }
 
-    .dashboard-container {
-      display: flex;
-      width: 100%;
-      min-height: 100vh;
-      transition: margin-left 0.3s;
-    }
-
-    /* Sidebar Styles */
     .sidebar {
-      width: 250px;
+      width: 300px; /* Wider Sidebar */
       background-color: #1e203d;
       color: white;
-      padding: 1rem;
-      display: flex;
-      flex-direction: column;
       min-height: 100vh;
-      transition: width 0.3s ease-in-out;
+      padding: 1rem;
+      transition: all 0.3s;
     }
 
-    .sidebar.closed {
-      width: 0;
-      display: none;
-    }
-
-    .sidebar header {
-      font-size: 1.5rem;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .sidebar ul li {
-      margin: 1rem 0;
-    }
-
-    .sidebar ul li a {
+    .sidebar a {
       color: white;
       text-decoration: none;
       padding: 0.5rem;
       display: block;
       border-radius: 4px;
-      transition: background 0.3s ease, color 0.3s ease;
+      transition: background 0.3s;
     }
 
-    .sidebar ul li a:hover {
-      background-color: #696fec;
-      color: #ecf0f1;
-    }
-
-    .zapier-integration {
-      margin-top: auto;
-      text-align: center;
-    }
-
-    .zapier-integration button {
-      padding: 0.5rem 1rem;
-      background-color: #1e203d;
-      border: none;
-      color: white;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .zapier-integration button:hover {
+    .sidebar a:hover {
       background-color: #696fec;
     }
 
-    /* Main Content Styles */
-    .main-content {
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      padding: 2rem;
-      box-sizing: border-box;
-      overflow: auto;
-    }
-
-    .cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1.5rem;
-}
-
-.card {
-  background-color: white;
-  padding: 1rem;
-  border-radius: 8px;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-  height: 130px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.card:hover {
-  transform: translateY(-10px);
-}
-
-.card span {
-  font-size: 1.8rem;
-  color: #34495e;
-  font-weight: bold;
-}
-
-.card p {
-  margin: 0.5rem 0 0;
-}
-
-/* Chart Section */
-.charts {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  margin-top: 2rem;
-  width: 100%;
-}
-
-.chart {
-  background-color: white;
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-}
-
-.chart-placeholder {
-  height: 200px;
-  background-color: #f4f4f4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  color: #aaa;
-  font-size: 1rem;
-}
-
-
-    .topbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem;
-      background-color: white;
+    .card {
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin-bottom: 2rem;
-      width: 100%;
-      box-sizing: border-box;
-      flex-wrap: wrap;
     }
 
-    .topbar h1 {
-      font-size: 1.5rem;
-      color: #34495e;
-      flex-grow: 1;
-      margin: 0;
-    }
-
-    .topbar input {
-      width: 40%;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .topbar .menu-toggle {
-      display: none;
-      background: none;
-      border: none;
-      color: #34495e;
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-
-    .user-info {
-      font-size: 1rem;
-      font-weight: bold;
-      color: #34495e;
-      display: flex;
-      align-items: center;
-    }
-
-    /* Profile Image */
     .profile-image {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  border: 3px solid #fff;
-  background-color: #ddd;
-  overflow: hidden;
-}
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #ddd;
+      overflow: hidden;
+    }
 
-.profile-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-    /* Quiz List Section */
-    .quiz-list {
+    .profile-image img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
-    .quiz-list h2 {
-      margin-bottom: 1.5rem;
-      font-size: 2rem;
-      color: #34495e;
-    }
-
-    .quiz-card {
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 1rem;
-      margin-bottom: 1rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .quiz-card h3 {
-      margin: 0 0 0.5rem;
-      font-size: 1.5rem;
-      color: #34495e;
-    }
-
-    .quiz-card p {
-      margin: 0.5rem 0;
-      font-size: 1rem;
-      color: #7f8c8d;
-    }
-
-    .button {
-      display: inline-block;
-      padding: 0.5rem 1rem;
-      background-color: #3498db;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      transition: background 0.3s ease;
-      align-self: flex-start;
-    }
-
-    .button:hover {
-      background-color: #2980b9;
-    }
-
-    .footer {
+    .footer, .header-card {
       text-align: center;
       margin-top: 2rem;
       padding: 1rem;
       background-color: white;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      box-sizing: border-box;
     }
 
-    .footer p {
-      margin: 0;
-      color: #7f8c8d;
-    }
-
-    .logout-link {
-      color: white;
-      text-decoration: none;
-    }
-
-    /* Media Queries for Responsiveness */
-    @media (max-width: 1024px) {
-      .topbar h1 {
-        font-size: 1.3rem;
-      }
-
-      .topbar input {
-        width: 50%;
-      }
-
-      .sidebar {
-        width: 200px;
-      }
-
-      .profile-image {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      background-color: #ddd;
-      overflow: hidden;
-      margin-left: 10px;
-    }
-
-    .profile-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .cards {
-    grid-template-columns: 1fr;
-  }
-
- .charts {
-    grid-template-columns: 1fr;
-  }
-    }
-
-    @media (max-width: 768px) {
-      .sidebar {
-        width: 0;
-        display: none;
-      }
-
-      .topbar .menu-toggle {
-        display: block;
-      }
-
-      .topbar input {
-        width: 60%;
-      }
-
-      .quiz-card {
-        padding: 0.8rem;
-      }
-
-      .button {
-        padding: 0.4rem 0.8rem;
-      }
-
-      .user-info {
-        margin-left: auto;
-      }
-      .cards {
-    grid-template-columns: 1fr;
-  }
-
- .charts {
-    grid-template-columns: 1fr;
-  }
-    }
-
-    @media (max-width: 480px) {
-      .topbar {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .topbar input {
-        width: 100%;
-        margin-bottom: 1rem;
-      }
-
-      .quiz-list h2 {
-        font-size: 1.5rem;
-      }
-
-      .quiz-card h3 {
-        font-size: 1.3rem;
-      }
-
-      .button {
-        width: 100%;
-        text-align: center;
-      }
-
-      .footer p {
-        font-size: 0.9rem;
-      }
-
-      /* Display sidebar when menu button is clicked */
-      .sidebar.open {
-        display: block;
-        width: 250px;
-      }
-      .profile-image {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      background-color: #ddd;
-      overflow: hidden;
-      margin-left: 10px;
-    }
-
-    .profile-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .cards {
-    grid-template-columns: 1fr;
-  }
-
- .charts {
-    grid-template-columns: 1fr;
-  }
-    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
-  <div class="dashboard-container">
-    <aside class="sidebar">
-      <header>TechPath</header>
-      <ul>
+  <div class="d-flex">
+    <!-- Sidebar -->
+    <nav class="sidebar flex-shrink-0">
+      <header class="text-center mb-4">
+        <h3>TechPath</h3>
+      </header>
+      <ul class="list-unstyled">
         <li><a href="Beranda.html">Dashboard</a></li>
         <li><a href="Materi.html">Materi</a></li>
-        <li><a href="dasboard_soal.html">Soal</a></li>
         <li><a href="profil.html">Profil</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
-      <div class="zapier-integration">
-        <div class="zapier-integration">
-          <button><a href="index.html" class="logout-link">Logout</a></button>
-        </div>
-    </aside>
+      <div class="mt-auto text-center">
+        <button class="btn btn-dark w-1000"><a href="index.html" class="text-white text-decoration-none">Logout</a></button>
+      </div>
+    </nav>
 
-    <div class="main-content">
-      <header class="topbar">
-        <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
-        <h1>Dashboard</h1>
-        <input type="text" placeholder="Search">
-        <div class="user-info">   <div class="profile-image">
-          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
-        </div></div>
-      </header>
+
+    <div class="container-fluid p-4">
+      <nav class="navbar bg-body-tertiary">
+        <button class="btn btn-outline-secondary d-md-none" onclick="toggleSidebar()">☰</button>
+        <div class="container-fluid">  
+          <a class="navbar-brand ">Dashboard</a>
+          <form class="d-flex mx-auto w-50" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          </form>
+          
+            <div class="profile-image">
+              <a href="/profil.html">
+                <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+              </a>
+            </div>
+        </div>
+      </nav>
 
       <section class="overview">
-        <h2>Dashboard</h2>
-        <div class="cards">
-          <div class="card">
-            <span>0/5</span>
-            <p>Hypertext markup language</p>
+        <br>
+        <h2 class="mb-4">Dashboard Overview</h2>
+        <div class="row g-4">
+          <div class="col-md-3">
+            <div class="card p-3">
+              <span class="d-block fs-4 fw-bold text-dark">0/5</span>
+              <p class="text-muted">Hypertext markup language</p>
+            </div>
           </div>
-          <div class="card">
-            <span>0/5</span>
-            <p>Cascading style sheet</p>
+          <div class="col-md-3">
+            <div class="card p-3">
+              <span class="d-block fs-4 fw-bold text-dark">0/5</span>
+              <p class="text-muted">Cascading style sheet</p>
+            </div>
           </div>
-          <div class="card">
-            <span>0/5</span>
-            <p>Hypertext Preprocessor</p>
+          <div class="col-md-3">
+            <div class="card p-3">
+              <span class="d-block fs-4 fw-bold text-dark">0/5</span>
+              <p class="text-muted">Hypertext Preprocessor</p>
+            </div>
           </div>
-          <div class="card">
-            <span>0/5</span>
-            <p>JavaScript</p>
+          <div class="col-md-3">
+            <div class="card p-3">
+              <span class="d-block fs-4 fw-bold text-dark">0/5</span>
+              <p class="text-muted">JavaScript</p>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="charts">
-        <div class="chart">
-          <h3>Requests Status</h3>
-          <canvas id="potentialChart"></canvas>
+      <section class="charts row g-4 mt-5">
+        <div class="col-md-6">
+          <div class="card p-3">
+            <h3>Requests Status</h3>
+            <canvas id="potentialChart"></canvas>
+          </div>
         </div>
-        <div class="chart">
-          <h3>Skill Potential Over Time</h3> 
-          <canvas id="skillPotentialChart"></canvas>
+        <div class="col-md-6">
+          <div class="card p-3">
+            <h3>Skill Potential Over Time</h3>
+            <canvas id="skillPotentialChart"></canvas>
+          </div>
         </div>
       </section>
 
-
-      <footer class="footer">
+      <footer class="footer mt-5">
         <p>&copy; 2025 Dashboard. All rights reserved.</p>
       </footer>
     </div>
   </div>
-<script>
 
-  const ctx1 = document.getElementById('potentialChart').getContext('2d');
-const potentialChart = new Chart(ctx1, {
-  type: 'bar',
-  data: {
-    labels: ['HTML', 'PHP', 'CSS', 'JS'],
-    datasets: [{
-      label: 'Potential',
-      data: [0, 0, 0, 0],
-      backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0']
-    }]
-  },
-  options: {
-    responsive: true,
-    plugins: {
-      legend: {
-        position: 'top',
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const ctx1 = document.getElementById('potentialChart').getContext('2d');
+    const potentialChart = new Chart(ctx1, {
+      type: 'bar',
+      data: {
+        labels: ['HTML', 'PHP', 'CSS', 'JS'],
+        datasets: [{
+          label: 'Potential',
+          data: [0, 0, 0, 0],
+          backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0']
+        }]
       },
-      title: {
-        display: true,
-        text: 'Individual Potential'
+      options: {
+        responsive: true,
+        plugins: {
+          legend: {
+            position: 'top',
+          },
+          title: {
+            display: true,
+            text: 'Individual Potential'
+          }
+        },
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        }
       }
-    },
-    scales: {
-      y: {
-        beginAtZero: true
-      }
-    }
-  }
-});
+    });
 
-const ctx2 = document.getElementById('skillPotentialChart').getContext('2d');
-const skillPotentialChart = new Chart(ctx2, {
-  type: 'line',
-  data: {
-    labels: ['January', 'February', 'March', 'April', 'May'],
-    datasets: [
-      {
-        label: 'HTML',
-        data: [2, 3, 2.5, 4, 5],
-        fill: false,
-        borderColor: '#FF6384',
-        tension: 0.1
+    const ctx2 = document.getElementById('skillPotentialChart').getContext('2d');
+    const skillPotentialChart = new Chart(ctx2, {
+      type: 'line',
+      data: {
+        labels: ['January', 'February', 'March', 'April', 'May'],
+        datasets: [
+          {
+            label: 'HTML',
+            data: [2, 3, 2.5, 4, 5],
+            fill: false,
+            borderColor: '#FF6384',
+            tension: 0.1
+          },
+          {
+            label: 'CSS',
+            data: [1, 2, 1.5, 2, 3],
+            fill: false,
+            borderColor: '#36A2EB',
+            tension: 0.1
+          },
+          {
+            label: 'PHP',
+            data: [2, 3, 3.5, 4, 5],
+            fill: false,
+            borderColor: '#FFCE56',
+            tension: 0.1
+          },
+          {
+            label: 'JavaScript',
+            data: [3, 3.5, 4, 4.5, 5],
+            fill: false,
+            borderColor: '#4BC0C0',
+            tension: 0.1
+          }
+        ]
       },
-      {
-        label: 'CSS',
-        data: [1, 2, 1.5, 2, 3],
-        fill: false,
-        borderColor: '#36A2EB',
-        tension: 0.1
-      },
-      {
-        label: 'PHP',
-        data: [2, 3, 3.5, 4, 5],
-        fill: false,
-        borderColor: '#FFCE56',
-        tension: 0.1
-      },
-      {
-        label: 'JavaScript',
-        data: [3, 3.5, 4, 4.5, 5],
-        fill: false,
-        borderColor: '#4BC0C0',
-        tension: 0.1
+      options: {
+        responsive: true,
+        plugins: {
+          legend: {
+            position: 'top',
+          },
+          title: {
+            display: true,
+            text: 'Skill Potential Over Time'
+          }
+        },
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        }
       }
-    ]
-  },
-  options: {
-    responsive: true,
-    plugins: {
-      legend: {
-        position: 'top',
-      },
-      title: {
-        display: true,
-        text: 'Skill Potential Over Time'
-      }
-    },
-    scales: {
-      y: {
-        beginAtZero: true
-      }
-    }
-  }
-});
+    });
 
     function toggleSidebar() {
       const sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('open');
+      sidebar.classList.toggle('d-none');
     }
-</script>
+  </script>
 </body>
 
 </html>
