--- a/Materi.html
+++ b/Materi.html
@@ -1,274 +1,58 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materi Dashboard</title>
+  <title>Dashboard</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
       background-color: #f0f2f5;
-      display: flex;
-      min-height: 100vh;
     }
 
-    .dashboard-container {
-      display: flex;
-      width: 100%;
-      min-height: 100vh;
-      transition: margin-left 0.3s;
-    }
-
-    /* Sidebar Styles */
     .sidebar {
-      width: 250px;
+      width: 300px; /* Wider Sidebar */
       background-color: #1e203d;
       color: white;
-      padding: 1rem;
-      display: flex;
-      flex-direction: column;
       min-height: 100vh;
-      transition: width 0.3s ease-in-out;
+      padding: 1rem;
+      transition: all 0.3s;
     }
 
-    .sidebar.closed {
-      width: 0;
-      display: none;
-    }
-
-    .sidebar header {
-      font-size: 1.5rem;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .sidebar ul li {
-      margin: 1rem 0;
-    }
-
-    .sidebar ul li a {
+    .sidebar a {
       color: white;
       text-decoration: none;
       padding: 0.5rem;
       display: block;
       border-radius: 4px;
-      transition: background 0.3s ease, color 0.3s ease;
+      transition: background 0.3s;
     }
 
-    .sidebar ul li a:hover {
-      background-color: #696fec;
-      color: #ecf0f1;
-    }
-
-    .zapier-integration {
-      margin-top: auto;
-      text-align: center;
-    }
-
-    .zapier-integration button {
-      padding: 0.5rem 1rem;
-      background-color: #1e203d;
-      border: none;
-      color: white;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .zapier-integration button:hover {
+    .sidebar a:hover {
       background-color: #696fec;
     }
 
-    /* Main Content Styles */
-    .main-content {
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      padding: 2rem;
-      box-sizing: border-box;
-      overflow: auto;
-    }
-
-    .cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1.5rem;
-}
-
-.card {
-  background-color: white;
-  padding: 1rem;
-  border-radius: 8px;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-  height: 130px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.card:hover {
-  transform: translateY(-10px);
-}
-
-.card span {
-  font-size: 1.8rem;
-  color: #34495e;
-  font-weight: bold;
-}
-
-.card p {
-  margin: 0.5rem 0 0;
-}
-
-/* Chart Section */
-.charts {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  margin-top: 2rem;
-  width: 100%;
-}
-
-.chart {
-  background-color: white;
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-}
-
-.chart-placeholder {
-  height: 200px;
-  background-color: #f4f4f4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  color: #aaa;
-  font-size: 1rem;
-}
-
-
-    .topbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem;
-      background-color: white;
+    .card {
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin-bottom: 2rem;
-      width: 100%;
-      box-sizing: border-box;
-      flex-wrap: wrap;
     }
 
-    .topbar h1 {
-      font-size: 1.5rem;
-      color: #34495e;
-      flex-grow: 1;
-      margin: 0;
-    }
-
-    .topbar input {
-      width: 40%;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .topbar .menu-toggle {
-      display: none;
-      background: none;
-      border: none;
-      color: #34495e;
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-
-    .user-info {
-      font-size: 1rem;
-      font-weight: bold;
-      color: #34495e;
-      display: flex;
-      align-items: center;
-    }
-
-    /* Profile Image */
     .profile-image {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  border: 3px solid #fff;
-  background-color: #ddd;
-  overflow: hidden;
-}
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background-color: #ddd;
+      overflow: hidden;
+    }
 
-.profile-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-    /* Quiz List Section */
-    .quiz-list {
+    .profile-image img {
       width: 100%;
-    }
-
-    .quiz-list h2 {
-      margin-bottom: 1.5rem;
-      font-size: 2rem;
-      color: #34495e;
-    }
-
-    .quiz-card {
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 1rem;
-      margin-bottom: 1rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .quiz-card h3 {
-      margin: 0 0 0.5rem;
-      font-size: 1.5rem;
-      color: #34495e;
-    }
-
-    .quiz-card p {
-      margin: 0.5rem 0;
-      font-size: 1rem;
-      color: #7f8c8d;
-    }
-
-    .button {
-      display: inline-block;
-      padding: 0.5rem 1rem;
-      background-color: #696fec;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      transition: background 0.3s ease;
-      align-self: flex-start;
-    }
-
-    .button:hover {
-      background-color: #696fec;
+      height: 100%;
+      object-fit: cover;
     }
 
     .footer {
@@ -278,215 +62,127 @@
       background-color: white;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      box-sizing: border-box;
-    }
-
-    .footer p {
-      margin: 0;
-      color: #7f8c8d;
-    }
-
-    .logout-link {
-      color: white;
-      text-decoration: none;
-    }
-
-    /* Media Queries for Responsiveness */
-    @media (max-width: 1024px) {
-      .topbar h1 {
-        font-size: 1.3rem;
-      }
-
-      .topbar input {
-        width: 50%;
-      }
-
-      .sidebar {
-        width: 200px;
-      }
-
-      .profile-image {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      background-color: #ddd;
-      overflow: hidden;
-      margin-left: 10px;
-    }
-
-    .profile-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .cards {
-    grid-template-columns: 1fr;
-  }
-
- .charts {
-    grid-template-columns: 1fr;
-  }
-    }
-
-    @media (max-width: 768px) {
-      .sidebar {
-        width: 0;
-        display: none;
-      }
-
-      .topbar .menu-toggle {
-        display: block;
-      }
-
-      .topbar input {
-        width: 60%;
-      }
-
-      .quiz-card {
-        padding: 0.8rem;
-      }
-
-      .button {
-        padding: 0.4rem 0.8rem;
-      }
-
-      .user-info {
-        margin-left: auto;
-      }
-      .cards {
-    grid-template-columns: 1fr;
-  }
-
- .charts {
-    grid-template-columns: 1fr;
-  }
-    }
-
-    @media (max-width: 480px) {
-      .topbar {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .topbar input {
-        width: 100%;
-        margin-bottom: 1rem;
-      }
-
-      .quiz-list h2 {
-        font-size: 1.5rem;
-      }
-
-      .quiz-card h3 {
-        font-size: 1.3rem;
-      }
-
-      .button {
-        width: 100%;
-        text-align: center;
-      }
-
-      .footer p {
-        font-size: 0.9rem;
-      }
-
-      /* Display sidebar when menu button is clicked */
-      .sidebar.open {
-        display: block;
-        width: 250px;
-      }
-      .profile-image {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      background-color: #ddd;
-      overflow: hidden;
-      margin-left: 10px;
-    }
-
-    .profile-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .cards {
-    grid-template-columns: 1fr;
-  }
-
- .charts {
-    grid-template-columns: 1fr;
-  }
     }
   </style>
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
-  <div class="dashboard-container">
-    <aside class="sidebar">
-      <header>TechPath</header>
-      <ul>
-        <li><a href="Beranda.html">Dashboard</a></li>
-        <li><a href="profil.html">Accounts</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-      <div class="zapier-integration">
-        <div class="zapier-integration">
-          <button><a href="index.html" class="logout-link">Logout</a></button>
-        </div>
-    </aside>
-    <div class="main-content">
-      <header class="topbar">
-        <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
-        <h1>Materi</h1>
-        <input type="text" placeholder="Search">
-        <div class="user-info"><div class="profile-image">
-          <a href="/profil.html"><img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture"></a>
-        </div></div>
-      </header>
 
-      <section class="materi">
-        <h2>Materi</h2>
-        <div class="cards">
+<body>
+  <div class="d-flex">
+    <!-- Sidebar -->
+    <nav class="sidebar flex-shrink-0">
+      <header class="text-center mb-4">
+        <h3>Materi</h3>
+      </header>
+      <ul class="list-unstyled">
+        <li><a href="Beranda.html">Dashboard</a></li>
+      </ul>
+      <div class="mt-auto text-center">
+        <button class="btn btn-dark w-1000 "><a href="index.html" class="text-white text-decoration-none">Logout</a></button>
+      </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container-fluid p-4">
+      <nav class="navbar bg-body-tertiary">
+        <button class="btn btn-outline-secondary d-md-none" onclick="toggleSidebar()">☰</button>
+        <div class="container-fluid">  
+          <a class="navbar-brand ">Materi</a>
+          <form class="d-flex mx-auto w-50" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          </form>
+            <div class="profile-image">
+              <a href="/profil.html">
+                <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Picture">
+              </a>
+            </div>
+        </div>
+      </nav>
+   
+<br>
+      <div class="row row-cols-lg-2 g-2 g-lg-3">
+        <div class="col-md-4">
           <div class="card">
-            <i class="fas fa-code"></i> 
-            <span>1</span>
-            <p>HTML Basics</p>
-            <a href="materihtml.html" class="button">Go to HTML Basics</a>
-          </div>
-          <div class="card">
-            <i class="fab fa-css3-alt"></i> 
-            <span>2</span>
-            <p>CSS Fundamentals</p>
-            <a href="matericss.html" class="button">Go to CSS Fundamentals</a>
-          </div>
-          <div class="card">
-            <i class="fab fa-js"></i> 
-            <span>3</span>
-            <p>JavaScript Introduction</p>
-            <a href="materijs.html" class="button">Go to JavaScript Introduction</a>
-          </div>
-          <div class="card">
-            <i class="fab fa-php"></i> 
-            <span>4</span>
-            <p>PHP Basics</p>
-            <a href="materiphp.html" class="button">Go to PHP Basics</a>
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <div class="card-body">
+              <h5 class="card-title">Book Title</h5>
+              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
+              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
+            </div>
           </div>
         </div>
-      </section>
-      
-      <footer class="footer">
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <div class="card-body">
+              <h5 class="card-title">Book Title</h5>
+              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
+              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <div class="card-body">
+              <h5 class="card-title">Book Title</h5>
+              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
+              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <div class="card-body">
+              <h5 class="card-title">Book Title</h5>
+              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
+              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <div class="card-body">
+              <h5 class="card-title">Book Title</h5>
+              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
+              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <div class="card-body">
+              <h5 class="card-title">Book Title</h5>
+              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
+              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer mt-5">
         <p>&copy; 2025 Dashboard. All rights reserved.</p>
       </footer>
     </div>
+
   </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     function toggleSidebar() {
       const sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('open');
+      sidebar.classList.toggle('d-none');
     }
   </script>
 </body>
+
 </html>
