--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,12 +20,8 @@
       width: 250px;
       background-color: #1e203d;
       color: white;
-      padding-top: 20px;
       position: fixed;
-    }
-
-    .sidebar:hover {
-      width: 250px;
+      padding-top: 20px;
     }
 
     .sidebar a {
@@ -32,19 +29,20 @@
       padding: 15px;
       text-decoration: none;
       display: flex;
-      align-items: center; /* Membuat ikon dan teks sejajar secara vertikal */
+      align-items: center;
       font-size: 16px;
       transition: none;
     }
 
     .sidebar .icon {
       font-size: 24px;
-      margin-right: 10px; /* Menambahkan jarak antara ikon dan teks */
+      margin-right: 10px;
     }
 
     .content {
       margin-left: 250px;
       padding: 20px;
+      transition: margin-left 0.3s ease-in-out;
     }
 
     .card {
@@ -52,6 +50,7 @@
       color: white;
       margin-bottom: 20px;
     }
+
 
     .card:hover {
       transform: none;
@@ -70,39 +69,37 @@
       .sidebar {
         width: 60px;
       }
-      .sidebar a {
-        padding: 10px;
-      }
+
       .content {
         margin-left: 60px;
+        padding: 10px; /* Reduce padding for small screens */
       }
+
       .card {
         font-size: 14px;
       }
+
       .sidebar .text {
         display: none;
       }
+
       .sidebar .icon {
         display: inline-block;
       }
+
       .sidebar h2 {
         display: none;
       }
+
+      /* Add more padding or margin for smaller screens */
+      .content {
+        margin-left: 70px;
+      }
     }
 
-    table th, table td {
-      vertical-align: middle;
-    }
-    table th {
-      background-color: #1e203d;
-      color: white;
-    }
-    table td {
-      background-color: #f8f9fa;
-    }
-
-    table tr:hover {
-      background-color: #f1f1f1;
+    /* Add some spacing to ensure the cards have enough margin in smaller viewports */
+    .card-body {
+      padding: 20px;
     }
   </style>
 </head>
@@ -233,7 +230,6 @@
       <a href="#" class="btn btn-primary">Back to Login</a>
     </div>
   </div>
-  
   <script>
     const ctx = document.getElementById('myChart').getContext('2d');
     const myChart = new Chart(ctx, {
@@ -260,5 +256,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
