--- a/Beranda.html
+++ b/Beranda.html
@@ -63,6 +63,13 @@
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
+    .logout-section {
+      position: absolute;
+      bottom: 20px; 
+      left: 0;
+      width: 100%;
+    }
+
 
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -82,8 +89,8 @@
         <li><a href="#">Settings</a></li>
       </ul>
       <div class="mt-auto text-center">
-        <button class="btn btn-dark w-1000"><a href="index.html" class="text-white text-decoration-none">Logout</a></button>
-      </div>
+  <button class="btn btn-dark w-1000"><a href="index.html" class="text-white text-decoration-none">Logout</a></button>
+</div>
     </nav>
 
 
