--- a/Detail.html
+++ b/Detail.html
@@ -95,9 +95,9 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img src="img/buku.jpg" class="card-img-top" alt="Book Image">
+            <img src="img/detailmodul.jpg" class="card-img-top" alt="Book Image">
             <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
+              <h5 class="card-title">Modul Materi 1</h5>
               <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
               <ul class="list-unstyled">
                 <li><strong>Author:</strong> John Doe</li>
@@ -113,9 +113,9 @@
         <!-- You can repeat the card above for more books -->
         <div class="col-md-4">
           <div class="card">
-            <img src="img/buku.jpg" class="card-img-top" alt="Book Image">
+            <img src="img/detailmodul.jpg" class="card-img-top" alt="Book Image">
             <div class="card-body">
-              <h5 class="card-title">Another Book Title</h5>
+              <h5 class="card-title">Modul Materi 2</h5>
               <p class="card-text">This is another book description. It can be similar or different from the first book, showcasing variety.</p>
               <ul class="list-unstyled">
                 <li><strong>Author:</strong> Jane Smith</li>
