--- a/Materi.html
+++ b/Materi.html
@@ -10,59 +10,66 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      background-color: #f0f2f5;
-    }
+  body {
+    background-color: #f0f2f5;
+  }
 
-    .sidebar {
-      width: 300px; /* Wider Sidebar */
-      background-color: #1e203d;
-      color: white;
-      min-height: 100vh;
-      padding: 1rem;
-      transition: all 0.3s;
-    }
+  .sidebar {
+    width: 300px;
+    background-color: #1e203d;
+    color: white;
+    min-height: 100vh;
+    padding: 1rem;
+    transition: all 0.3s;
+  }
 
-    .sidebar a {
-      color: white;
-      text-decoration: none;
-      padding: 0.5rem;
-      display: block;
-      border-radius: 4px;
-      transition: background 0.3s;
-    }
+  .sidebar a {
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem;
+    display: block;
+    border-radius: 4px;
+    transition: background 0.3s;
+  }
 
-    .sidebar a:hover {
-      background-color: #696fec;
-    }
+  .sidebar a:hover {
+    background-color: #696fec;
+  }
 
-    .card {
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
+  .card {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
 
-    .profile-image {
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      background-color: #ddd;
-      overflow: hidden;
-    }
+  .card img {
+    max-width: 100%; 
+    height: 150px; 
+    object-fit: cover; 
+    border-radius: 4px; 
+  }
 
-    .profile-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+  .profile-image {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: #ddd;
+    overflow: hidden;
+  }
 
-    .footer {
-      text-align: center;
-      margin-top: 2rem;
-      padding: 1rem;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
+  .profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .footer {
+    text-align: center;
+    margin-top: 2rem;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -103,9 +110,9 @@
       <div class="row row-cols-lg-2 g-2 g-lg-3">
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <img src="img/materihtml.jpg" class="card-img-top" alt="Book Image">
             <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
+              <h5 class="card-title">Materi HTML</h5>
               <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
               <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
             </div>
@@ -114,9 +121,9 @@
 
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <img src="img/matericss.jpg" class="card-img-top" alt="Book Image">
             <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
+              <h5 class="card-title">Materi CSS</h5>
               <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
               <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
             </div>
@@ -125,9 +132,9 @@
 
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <img src="img/MateriJavascript.jpg" class="card-img-top" alt="Book Image">
             <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
+              <h5 class="card-title">Materi JavaScript</h5>
               <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
               <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
             </div>
@@ -136,31 +143,9 @@
 
         <div class="col-md-4">
           <div class="card">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
+            <img src="img/MateriPHP.jpg" class="card-img-top" alt="Book Image">
             <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
-              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
-              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
-            <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
-              <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
-              <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Book Image">
-            <div class="card-body">
-              <h5 class="card-title">Book Title</h5>
+              <h5 class="card-title">Materi PHP</h5>
               <p class="card-text">A brief description of the book goes here. It summarizes the content and what the reader can expect from the book.</p>
               <a href="Detail.html" class="btn" style="background-color:#696fec; color: white;">View Details</a>
             </div>
